--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,17 @@
 .header{
-    background-color: darkcyan;
+    background-color: dimgrey;
 
 }
 h1{
     color: coral;
     text-align: left;
-
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 30px;
+    font-weight: 200;
 }
 #msg{
     font-size: 18px;
+    font-family: 'Lora', serif;
 }
 .bg{
     background-image: url(big_img.jpg);
@@ -17,26 +20,33 @@ h1{
 }
 #h4{
     text-align: right;
+    font-family: 'Lato', sans-serif;
+    font-weight: 100;
+
 }
-mbp{
+#mbp{
     text-align: center;
+    font-family: 'Lato', sans-serif;
 }
 .ad{
     text-align: center;
+    font-family: 'Lato', sans-serif;
+
 }
 #ad{
     background-color: green;
-    width: 600px;
+    width: 100%;
     height: 120px;
 }
 .footer{
-    background-color: darkcyan;
+    background-color: darkgray;
 }
 #footer{
     text-align: center;
 }
 h2{
     text-align: center;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 .logo{
     display: inline-block;
@@ -46,4 +56,8 @@ h2{
 }
 body{
     width: 100%;
+}
+p{
+    font-family: 'Montserrat', sans-serif;
+
 }
