bagged images in one folder and changed their paths on the html document

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ h1{
     font-family: 'Lora', serif;
 }
 .bg{
-    background-image: url(big_img.jpg);
+    background-image: url(images/big_img.jpg);
     background-size: cover;
     height: 600px;
 }
@@ -73,8 +73,8 @@ p{
     height: 200px;
 }
 .left{
-    clear: left;
+    float: left;
 }
 .right{
-    clear: right;
+    float: right;
 }
